# SignalK-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  partitions.dev.csv  partitions.release.csv  sdkconfig.defaults  sdkconfig.defaults.dev  sdkconfig.defaults.release
bins/signalk-server-esp32/: Cargo.toml  README.md  build.rs  sdkconfig.defaults
bins/signalk-server-esp32/.cargo/: config.toml
bins/signalk-server-esp32/src/: main.rs
bins/signalk-server-linux/: Cargo.toml
bins/signalk-server-linux/src/: main.rs
crates/signalk-core/: Cargo.toml
crates/signalk-core/src/: config.rs  lib.rs  model.rs  path.rs  store.rs
crates/signalk-esp32/: Cargo.toml
crates/signalk-esp32/src/: config.rs  http.rs  lib.rs  wifi.rs
crates/signalk-plugins/: Cargo.toml
crates/signalk-plugins/src/: lib.rs
crates/signalk-protocol/: Cargo.toml
crates/signalk-protocol/src/: codec.rs  lib.rs  messages.rs
crates/signalk-providers/: Cargo.toml
crates/signalk-providers/src/: lib.rs
crates/signalk-server/: Cargo.toml
crates/signalk-server/src/: lib.rs  server.rs  subscription.rs
crates/signalk-server/tests/: integration_test.rs
crates/signalk-web/: Cargo.toml
crates/signalk-web/public/admin/: index.html
crates/signalk-web/src/: lib.rs  server_events.rs  statistics.rs
crates/signalk-web/src/routes/: auth.rs  backup.rs  config.rs  mod.rs  plugins.rs  security.rs
docs/: ARCHITECTURE.md  ESP32_BINARY_SIZE_PLAN.md  ESP32_MEMORY.md  ESP32_MODULARITY.md  ESP32_WEB_UI_ANALYSIS.md  IMPLEMENTATION_PLAN.md  RESEARCH_PLAN.md  TODO_ESP32_MEMORY.md
tests/integration/: 00_rest_api.sh  01_hello.sh  02_subscriptions.sh  03_throttling.sh  04_path_subscriptions.sh  05_send_delta.sh  run_all.sh  test_common.sh
