[workspace]
resolver = "2"

members = [
    "crates/signalk-core",
    "crates/signalk-protocol",
    "crates/signalk-server",
    "crates/signalk-plugins",
    "crates/signalk-providers",
    "crates/signalk-web",
    "bins/signalk-server-linux",
    # "bins/signalk-server-esp32",  # Uncomment when ESP32 toolchain is set up
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/your-org/signalk-rs"
rust-version = "1.75"

[workspace.lints.rust]
unused_imports = "allow"
dead_code = "allow"
unused_variables = "allow"

[workspace.dependencies]
# Shared dependencies - use workspace = true in member crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.133"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
anyhow = "1.0"

# Async runtime (Linux)
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# HTTP (Linux)
axum = "0.7"
tower = "0.4"

# Internal crates
signalk-core = { path = "crates/signalk-core" }
signalk-protocol = { path = "crates/signalk-protocol" }
signalk-server = { path = "crates/signalk-server" }
signalk-plugins = { path = "crates/signalk-plugins" }
signalk-providers = { path = "crates/signalk-providers" }
signalk-web = { path = "crates/signalk-web" }
