[package]
name = "signalk-server-esp32"
description = "SignalK server for ESP32 (minimal, no plugin support)"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.82"

[[bin]]
name = "signalk-server-esp32"
path = "src/main.rs"

# Note: Profile settings for ESP32 (opt-level, lto) are in workspace Cargo.toml

[features]
default = ["std", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]

[dependencies]
# Shared SignalK crates (platform-agnostic)
signalk-core = { path = "../../crates/signalk-core" }
signalk-protocol = { path = "../../crates/signalk-protocol" }

# ESP32-specific shared components
signalk-esp32 = { path = "../../crates/signalk-esp32" }

# ESP-IDF framework
# Note: experimental feature enables ws_handler for WebSocket server support
esp-idf-svc = { version = "0.51", default-features = false, features = ["experimental"] }
esp-idf-hal = { version = "0.45.2", default-features = false, features = ["experimental"] }
embedded-svc = { version = "0.28", features = ["experimental"] }

# Logging
log = "0.4"

# Error handling
anyhow = "1.0"

# Serialization (already used by signalk-core)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
