[package]
name = "signalk-esp32"
description = "ESP32-specific components for SignalK server (WiFi, NVS, HTTP handlers)"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.82"

[dependencies]
# Shared SignalK crates (platform-agnostic)
signalk-core = { path = "../signalk-core" }
signalk-protocol = { path = "../signalk-protocol" }

# ESP-IDF framework
# Note: experimental feature enables ws_handler for WebSocket server support
esp-idf-svc = { version = "0.51", default-features = false, features = ["experimental"] }
esp-idf-hal = { version = "0.45.2", default-features = false, features = ["experimental"] }
embedded-svc = { version = "0.28", features = ["experimental"] }

# Logging
log = "0.4"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
