[package]
name = "signalk-plugins"
description = "Deno-based JavaScript plugin runtime for SignalK (Linux only)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
signalk-core = { workspace = true }
signalk-server = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
