[package]
name = "signalk-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Admin Web UI and REST API for Signal K server (Linux only)"

[dependencies]
signalk-core = { workspace = true }
signalk-protocol = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip"] }
tokio = { workspace = true }

# Static file embedding (optional - for release builds)
rust-embed = { version = "8.0", optional = true }

[features]
default = []
embed-ui = ["rust-embed"]  # Embed admin UI in binary

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
